# MSE_436_Final_Project

./: .env  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: enrich.py  main.py
db/: models.py  session.py
frontend/: .e2e_check.mjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
migrations/: 001_initial_schema.sql
model/: knn.py
pipeline/: backtest_transfers.py  build_features.py  build_player_table.py  create_decisions_table.py  fetch_api_football.py  ingest.py  scrape_transfermarkt_values.py  transform.py
pipeline/cache/: players_team157_season2024_page1.json  players_team157_season2024_page2.json  players_team157_season2024_page3.json  players_team160_season2024_page1.json  players_team160_season2024_page2.json  players_team160_season2024_page3.json  players_team161_season2024_page1.json  players_team161_season2024_page2.json  players_team161_season2024_page3.json  players_team162_season2024_page1.json  players_team162_season2024_page2.json  players_team162_season2024_page3.json  players_team163_season2024_page1.json  players_team163_season2024_page2.json  players_team164_season2024_page1.json  players_team164_season2024_page2.json  players_team165_season2024_page1.json  players_team165_season2024_page2.json  players_team165_season2024_page3.json  players_team1660_season2024_page1.json  players_team1660_season2024_page2.json  players_team167_season2024_page1.json  (+179 more)
scrapers/: base.py  sofascore.py  transfermarkt.py
(+212 files in other folders)
