[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-idss"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fake-useragent>=1.5",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "tqdm>=4.66",
    "loguru>=0.7",
    "click>=8.1",
    "supabase>=2.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "pipeline*", "scrapers*"]
